force-app/main/default/objects/Membership_Logo__mdt/Membership_Logo__mdt.object-meta.xml
<CustomObject>
    <description>Allows display of logos based on Society Membership records.</description>
    <label>Membership Logo</label>
    <pluralLabel>Membership Logos</pluralLabel>
</CustomObject>