force-app/main/default/objects/Membership_Logo__mdt/fields/Giving_Society__c.field-meta.xml
<CustomField>
    <fullName>Giving_Society__c</fullName>
    <label>Giving Society</label>
    <length>255</length>
    <type>Text</type>
</CustomField>