force-app/main/default/objects/Membership_Logo__mdt/fields/Membership_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level_Code__c</fullName>
    <label>Membership Level Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>