force-app/main/default/objects/Membership_Logo__mdt/fields/Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource__c</fullName>
    <description>The name of the static resource containing the logo associated with the Society Membership.</description>
    <inlineHelpText>The name of the static resource containing the logo associated with the Society Membership.</inlineHelpText>
    <label>Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>