force-app/main/default/objects/Membership_Logo__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Giving_Society__c</columns>
    <columns>Membership_Level_Code__c</columns>
    <columns>Static_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>